--- a/atlas.html
+++ b/atlas.html
@@ -225,6 +225,9 @@
         <div class="filters" aria-label="Kategoriler">
           <span class="label">Kategoriler:</span>
           <div class="chip active" data-filter="all" role="button" tabindex="0">Tümü</div>
+          <div class="chip" data-filter="diğer" role="button" tabindex="0">Diğer</div>
+          <div class="chip" data-filter="3dmodelleronizlemesi" role="button" tabindex="0">3D modeller önizlemesi</div>
+          <div class="chip" data-filter="peoples" role="button" tabindex="0">Peoples</div>
           <div class="chip" data-filter="turk" role="button" tabindex="0">Türk Uyduları</div>
           <div class="chip" data-filter="gezegen" role="button" tabindex="0">Gezegenler</div>
           <div class="chip" data-filter="mars" role="button" tabindex="0">Mars Araçları</div>
@@ -232,50 +235,56 @@
         </div>
 
         <section class="grid">
-          <a class="card" data-category="turk" href="gokturk-1/"><div class="tag">Uydu</div><h2>GÖKTÜRK-1</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="gokturk-2/"><div class="tag">Uydu</div><h2>GÖKTÜRK-2</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="rasat/"><div class="tag">Uydu</div><h2>RASAT</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="imece/"><div class="tag">Uydu</div><h2>İMECE</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-1A/"><div class="tag">Uydu</div><h2>TÜRKSAT 1A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-1B/"><div class="tag">Uydu</div><h2>TÜRKSAT 1B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-1C/"><div class="tag">Uydu</div><h2>TÜRKSAT 1C</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-2A/"><div class="tag">Uydu</div><h2>TÜRKSAT 2A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-3A/"><div class="tag">Uydu</div><h2>TÜRKSAT 3A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-3B/"><div class="tag">Uydu</div><h2>TÜRKSAT 3B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-4A/"><div class="tag">Uydu</div><h2>TÜRKSAT 4A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-5A/"><div class="tag">Uydu</div><h2>TÜRKSAT 5A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-5B/"><div class="tag">Uydu</div><h2>TÜRKSAT 5B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="turksat-6A/"><div class="tag">Uydu</div><h2>TÜRKSAT 6A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="lagari/"><div class="tag">Uydu</div><h2>Lagari</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
-          <a class="card" data-category="turk" href="iss/"><div class="tag">İstasyon</div><h2>Uluslararası Uzay İstasyonu</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-gokturk-1/"><div class="tag">Uydu</div><h2>GÖKTÜRK-1</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-gokturk-2/"><div class="tag">Uydu</div><h2>GÖKTÜRK-2</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-rasat/"><div class="tag">Uydu</div><h2>RASAT</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-imece/"><div class="tag">Uydu</div><h2>İMECE</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1A/"><div class="tag">Uydu</div><h2>TÜRKSAT 1A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1B/"><div class="tag">Uydu</div><h2>TÜRKSAT 1B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1C/"><div class="tag">Uydu</div><h2>TÜRKSAT 1C</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-2A/"><div class="tag">Uydu</div><h2>TÜRKSAT 2A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-3A/"><div class="tag">Uydu</div><h2>TÜRKSAT 3A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-3B/"><div class="tag">Uydu</div><h2>TÜRKSAT 3B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-4A/"><div class="tag">Uydu</div><h2>TÜRKSAT 4A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-5A/"><div class="tag">Uydu</div><h2>TÜRKSAT 5A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-5B/"><div class="tag">Uydu</div><h2>TÜRKSAT 5B</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-6A/"><div class="tag">Uydu</div><h2>TÜRKSAT 6A</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="turk" href="atlas/atlas-lagari/"><div class="tag">Uydu</div><h2>Lagari</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="Diğermodeller" href="atlas/atlas-iss/"><div class="tag">İstasyon</div><h2>Uluslararası Uzay İstasyonu</h2><p>3D görünüm için tıklayın.</p></a>
 
-          <a class="card" data-category="gezegen" href="mercury/"><div class="tag">Gezegen</div><h2>Merkür</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="venus/"><div class="tag">Gezegen</div><h2>Venüs</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="earth/"><div class="tag">Gezegen</div><h2>Dünya</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="mars/"><div class="tag">Gezegen</div><h2>Mars</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="jupiter/"><div class="tag">Gezegen</div><h2>Jüpiter</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="saturn/"><div class="tag">Gezegen</div><h2>Satürn</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="uranus/"><div class="tag">Gezegen</div><h2>Uranüs</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="gezegen" href="neptune/"><div class="tag">Gezegen</div><h2>Neptün</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-mercury/"><div class="tag">Gezegen</div><h2>Merkür</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-venus/"><div class="tag">Gezegen</div><h2>Venüs</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-earth/"><div class="tag">Gezegen</div><h2>Dünya</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-mars/"><div class="tag">Gezegen</div><h2>Mars</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-jupiter/"><div class="tag">Gezegen</div><h2>Jüpiter</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-saturn/"><div class="tag">Gezegen</div><h2>Satürn</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-uranus/"><div class="tag">Gezegen</div><h2>Uranüs</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="gezegen" href="atlas/atlas-neptune/"><div class="tag">Gezegen</div><h2>Neptün</h2><p>3D görünüm için tıklayın.</p></a>
 
-          <a class="card" data-category="teleskop" href="sputnik/"><div class="tag">Uydu</div><h2>Sputnik</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="teleskop" href="voyager1/"><div class="tag">Sonda</div><h2>Voyager 1</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="teleskop" href="voyager2/"><div class="tag">Sonda</div><h2>Voyager 2</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="teleskop" href="hubble/"><div class="tag">Teleskop</div><h2>Hubble Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="teleskop" href="jameswebb/"><div class="tag">Teleskop</div><h2>James Webb Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="teleskop" href="kepler/"><div class="tag">Teleskop</div><h2>Kepler Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="diğer" href="atlas/atlas-sputnik/"><div class="tag">Uydu</div><h2>Sputnik</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="diğer" href="atlas/atlas-voyager1/"><div class="tag">Sonda</div><h2>Voyager 1</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="diğer" href="atlas/atlas-voyager2/"><div class="tag">Sonda</div><h2>Voyager 2</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="teleskop" href="atlas/atlas-hubble/"><div class="tag">Teleskop</div><h2>Hubble Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="teleskop" href="atlas/atlas-jameswebb/"><div class="tag">Teleskop</div><h2>James Webb Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="teleskop" href="atlas/atlas-kepler/"><div class="tag">Teleskop</div><h2>Kepler Uzay Teleskobu</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-exomars/"><div class="tag">Görev</div><h2>ExoMars</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-marsodyssey/"><div class="tag">Görev</div><h2>Mars Odyssey</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-marsreconnaissance/"><div class="tag">Görev</div><h2>Mars Reconnaissance Orbiter</h2><p>Görev detayları için tıklayın.</p></a>
 
-          <a class="card" data-category="mars" href="exomars/"><div class="tag">Görev</div><h2>ExoMars</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="marsodyssey/"><div class="tag">Görev</div><h2>Mars Odyssey</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="marsreconnaissance/"><div class="tag">Görev</div><h2>Mars Reconnaissance Orbiter</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelleronizlemesi" href="atlas/atlas-gokturk-1/"><div class="tag">Uydu</div><h2>GÖKTÜRK-1</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelleronizlemesi" href="atlas/atlas-rasat/"><div class="tag">Uydu</div><h2>RASAT</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelleronizlemesi" href="atlas/atlas-opportunity/"><div class="tag">Rover</div><h2>Opportunity</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelleronizlemesi" href="atlas/atlas-sojourner/"><div class="tag">Rover</div><h2>Sojourner</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelleronizlemesi" href="atlas/atlas-sputnik/"><div class="tag">Uydu</div><h2>Sputnik</h2><p>3D görünüm için tıklayın.</p></a>
 
-          <a class="card" data-category="mars" href="perseverance/"><div class="tag">Rover</div><h2>Perseverance</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="curiosity/"><div class="tag">Rover</div><h2>Curiosity</h2><p>3D görünüm için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="ingenuity/"><div class="tag">Helikopter</div><h2>Ingenuity</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="opportunity/"><div class="tag">Rover</div><h2>Opportunity</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="sojourner/"><div class="tag">Rover</div><h2>Sojourner</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="spirit/"><div class="tag">Rover</div><h2>Spirit</h2><p>Görev detayları için tıklayın.</p></a>
-          <a class="card" data-category="mars" href="zhurong/"><div class="tag">Rover</div><h2>Zhurong</h2><p>3D görünüm için tıklayın.</p></a>
+
+          <a class="card" data-category="mars" href="atlas/atlas-perseverance/"><div class="tag">Rover</div><h2>Perseverance</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-curiosity/"><div class="tag">Rover</div><h2>Curiosity</h2><p>3D görünüm için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-ingenuity/"><div class="tag">Helikopter</div><h2>Ingenuity</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-opportunity/"><div class="tag">Rover</div><h2>Opportunity</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-sojourner/"><div class="tag">Rover</div><h2>Sojourner</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-spirit/"><div class="tag">Rover</div><h2>Spirit</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="mars" href="atlas/atlas-zhurong/"><div class="tag">Rover</div><h2>Zhurong</h2><p>3D görünüm için tıklayın.</p></a>
         </section>
 
       </div>
