--- a/bmw/index.html
+++ b/bmw/index.html
@@ -141,11 +141,11 @@
     
   </div>
 
-  <h1 style="margin-top: 20px;">Curiosity</h1>
+  <h1 style="margin-top: 20px;">BMW C-HR</h1>
 
   <div class="container">
-    <p>Curiosity, Gale Krateri'nde Mars'ın yaşama elverişli olup olmadığını inceleyen bir gezgindir.</p>
-    <model-viewer data-track="model_view" data-model-name="perseverance" src="/assets/models/perseverance.glb" camera-controls ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
+    <p>BMW C-HR, modern bir SUV'dur ve yüksek performansı ile dikkat çeker.</p>
+    <model-viewer data-track="model_view" data-model-name="perseverance" src="/assets/models/bmw.glb" camera-controls ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
   </div>
   <div data-include="/footer-tr.html"></div>
 </body>
