--- a/eng/atlas.html
+++ b/eng/atlas.html
@@ -237,7 +237,11 @@ section.grid {
         <!-- FIXED: added data-filter + accessibility -->
         <div class="filters" aria-label="Categories">
           <span class="label">Categories:</span>
+          <div class="chip" data-filter="peoples" role="button" tabindex="0">Peoples</div>
+          <div class="chip" data-filter="3dmodelspreview" role="button" tabindex="0">3D models preview</div>
+
           <div class="chip active" data-filter="all" role="button" tabindex="0">All</div>
+          <div class="chip" data-filter="other" role="button" tabindex="0">Other</div>
           <div class="chip" data-filter="turk" role="button" tabindex="0">Turkish Satellites</div>
           <div class="chip" data-filter="gezegen" role="button" tabindex="0">Planets</div>
           <div class="chip" data-filter="mars" role="button" tabindex="0">Mars Rovers</div>
@@ -248,212 +252,220 @@ section.grid {
         <section class="grid">
 
           <!-- Turkish Satellites -->
-          <a class="card" data-category="turk" href="gokturk-1/">
+          <a class="card" data-category="turk" href="atlas/atlas-gokturk-1/">
             <div class="tag">Satellite</div>
             <h2>GÖKTÜRK-1</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="gokturk-2/">
+          <a class="card" data-category="turk" href="atlas/atlas-gokturk-2/">
             <div class="tag">Satellite</div>
             <h2>GÖKTÜRK-2</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="rasat/">
+          <a class="card" data-category="turk" href="atlas/atlas-rasat/">
             <div class="tag">Satellite</div>
             <h2>RASAT</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="imece/">
+          <a class="card" data-category="turk" href="atlas/atlas-imece/">
             <div class="tag">Satellite</div>
             <h2>İMECE</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-1A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 1A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-1B/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1B/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 1B</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-1C/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-1C/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 1C</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-2A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-2A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 2A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-3A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-3A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 3A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-3B/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-3B/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 3B</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-4A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-4A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 4A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-5A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-5A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 5A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-5B/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-5B/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 5B</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="turksat-6A/">
+          <a class="card" data-category="turk" href="atlas/atlas-turksat-6A/">
             <div class="tag">Satellite</div>
             <h2>TÜRKSAT 6A</h2>
             <p>Click to see details.</p>
           </a>
-          <a class="card" data-category="turk" href="lagari/">
+          <a class="card" data-category="turk" href="atlas/atlas-lagari/">
             <div class="tag">Rocket</div>
             <h2>Lagari</h2>
             <p>Click to see details.</p>
           </a>
 
+
+          <a class="card" data-category="3dmodelspreview" href="atlas/atlas-gokturk-1/"><div class="tag">Uydu</div><h2>GÖKTÜRK-1</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelspreview" href="atlas/atlas-rasat/"><div class="tag">Uydu</div><h2>RASAT</h2><p>Ayrıntılı bilgi için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelspreview" href="atlas/atlas-opportunity/"><div class="tag">Rover</div><h2>Opportunity</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelspreview" href="atlas/atlas-sojourner/"><div class="tag">Rover</div><h2>Sojourner</h2><p>Görev detayları için tıklayın.</p></a>
+          <a class="card" data-category="3dmodelspreview" href="atlas/atlas-sputnik/"><div class="tag">Uydu</div><h2>Sputnik</h2><p>3D görünüm için tıklayın.</p></a>
+
+
           <!-- Space Station (kept in Turkish Satellites group so it doesn't disappear) -->
-          <a class="card" data-category="turk" href="iss/">
+          <a class="card" data-category="other" href="atlas/atlas-atlas-iss/">
             <div class="tag">Station</div>
             <h2>International Space Station</h2>
             <p>Click to see 3D view.</p>
           </a>
-
+          <a class="card" data-category="other" href="atlas/atlas-sputnik/">
+            <div class="tag">Satellite</div>
+            <h2>Sputnik</h2>
+            <p>Click to see 3D view.</p>
+          </a>
           <!-- Planets -->
-          <a class="card" data-category="gezegen" href="mercury/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-mercury/">
             <div class="tag">Planet</div>
             <h2>Mercury</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="venus/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-venus/">
             <div class="tag">Planet</div>
             <h2>Venus</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="earth/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-earth/">
             <div class="tag">Planet</div>
             <h2>Earth</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="mars/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-mars/">
             <div class="tag">Planet</div>
             <h2>Mars</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="jupiter/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-jupiter/">
             <div class="tag">Planet</div>
             <h2>Jupiter</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="saturn/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-saturn/">
             <div class="tag">Planet</div>
             <h2>Saturn</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="uranus/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-uranus/">
             <div class="tag">Planet</div>
             <h2>Uranus</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="gezegen" href="neptune/">
+          <a class="card" data-category="gezegen" href="atlas/atlas-neptune/">
             <div class="tag">Planet</div>
             <h2>Neptune</h2>
             <p>Click to see 3D view.</p>
           </a>
 
           <!-- Probes / Telescopes -->
-          <a class="card" data-category="teleskop" href="sputnik/">
-            <div class="tag">Satellite</div>
-            <h2>Sputnik</h2>
-            <p>Click to see 3D view.</p>
-          </a>
-          <a class="card" data-category="teleskop" href="voyager1/">
+
+          <a class="card" data-category="teleskop" href="atlas/atlas-voyager1/">
             <div class="tag">Probe</div>
             <h2>Voyager 1</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="teleskop" href="voyager2/">
+          <a class="card" data-category="teleskop" href="atlas/atlas-voyager2/">
             <div class="tag">Probe</div>
             <h2>Voyager 2</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="teleskop" href="hubble/">
+          <a class="card" data-category="teleskop" href="atlas/atlas-hubble/">
             <div class="tag">Telescope</div>
             <h2>Hubble Space Telescope</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="teleskop" href="jameswebb/">
+          <a class="card" data-category="teleskop" href="atlas/atlas-jameswebb/">
             <div class="tag">Telescope</div>
             <h2>James Webb Space Telescope</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="teleskop" href="kepler/">
+          <a class="card" data-category="teleskop" href="atlas/atlas-kepler/">
             <div class="tag">Telescope</div>
             <h2>Kepler Space Telescope</h2>
             <p>Click to see 3D view.</p>
           </a>
 
           <!-- Mars missions (these belong to Mars Rovers filter in your UI) -->
-          <a class="card" data-category="mars" href="exomars/">
+          <a class="card" data-category="mars" href="atlas/atlas-exomars/">
             <div class="tag">Mission</div>
             <h2>ExoMars</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="marsodyssey/">
+          <a class="card" data-category="mars" href="atlas/atlas-marsodyssey/">
             <div class="tag">Mission</div>
             <h2>Mars Odyssey</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="marsreconnaissance/">
+          <a class="card" data-category="mars" href="atlas/atlas-marsreconnaissance/">
             <div class="tag">Mission</div>
             <h2>Mars Reconnaissance Orbiter</h2>
             <p>Click to see mission details.</p>
           </a>
 
           <!-- Mars Rovers -->
-          <a class="card" data-category="mars" href="perseverance/">
+          <a class="card" data-category="mars" href="atlas/atlas-perseverance/">
             <div class="tag">Rover</div>
             <h2>Perseverance</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="mars" href="curiosity/">
+          <a class="card" data-category="mars" href="atlas/atlas-curiosity/">
             <div class="tag">Rover</div>
             <h2>Curiosity</h2>
             <p>Click to see 3D view.</p>
           </a>
-          <a class="card" data-category="mars" href="ingenuity/">
+          <a class="card" data-category="mars" href="atlas/atlas-ingenuity/">
             <div class="tag">Helicopter</div>
             <h2>Ingenuity</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="opportunity/">
+          <a class="card" data-category="mars" href="atlas/atlas-opportunity/">
             <div class="tag">Rover</div>
             <h2>Opportunity</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="sojourner/">
+          <a class="card" data-category="mars" href="atlas/atlas-sojourner/">
             <div class="tag">Rover</div>
             <h2>Sojourner</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="spirit/">
+          <a class="card" data-category="mars" href="atlas/atlas-spirit/">
             <div class="tag">Rover</div>
             <h2>Spirit</h2>
             <p>Click to see mission details.</p>
           </a>
-          <a class="card" data-category="mars" href="zhurong/">
+          <a class="card" data-category="mars" href="atlas/atlas-zhurong/">
             <div class="tag">Rover</div>
             <h2>Zhurong</h2>
             <p>Click to see 3D view.</p>
