--- a/toyota/index.html
+++ b/toyota/index.html
@@ -144,7 +144,7 @@
   <h1 style="margin-top: 20px;">TOYOTA C-HR</h1>
 
   <div class="container">
-    <p>TOYOTA C-HR, modern bir SUV'dur ve yüksek performansı ile dikkat çeker.</p>
+    <p>Modern bir SUV'dur ve yüksek performansı ile dikkat çeker.</p>
     <model-viewer data-track="model_view" data-model-name="perseverance" src="/assets/models/toyota.glb" camera-controls ar ar-modes="webxr scene-viewer quick-look"></model-viewer>
   </div>
   <div data-include="/footer-tr.html"></div>
