--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,13 @@
       --text-muted: #9ca3af;
     }
     body { background: #020617 url("/assets/images/space-bg.jpg") center/cover fixed no-repeat; color: var(--text-main); }
-  
+  /* Добавьте это внутрь тега <style> */
+.product-card, .reveal {
+  opacity: 1 !important;
+  transform: none !important;
+  visibility: visible !important;
+}
+
 
 </style>
   <!-- Header/footer'ı yüklemek ve sepet mantığını eklemek için scriptler -->
