--- a/eng/product-albamenvelara1.html
+++ b/eng/product-albamenvelara1.html
@@ -32,7 +32,7 @@
         <h1>Book PDF</h1>
         <div class="product-price">160.00 TL</div>
         <ul class="product-details">
-          <li>The story of Albamen Velara</li>
+          <li>The story of Albamen Ve Lara</li>
           <li>Digital format</li>
           <li>Instant download</li>
           <li>PDF file</li>
