--- a/eng/teslimat-ve-iade-sartlari.html
+++ b/eng/teslimat-ve-iade-sartlari.html
@@ -95,22 +95,17 @@
       h1 { font-size: 28px; }
       h2 { font-size: 20px; }
     }
-  
-
-</style>
+    
+    /* СТРАХОВКА: Гарантируем, что контент виден */
+    .glass-box, .page, main {
+        opacity: 1 !important;
+        transform: none !important;
+        visibility: visible !important;
+        filter: none !important;
+    }
+  </style>
 </head>
 <body>
-
-  <style>
-    /* Disable all animations and transitions on this page */
-    * { animation: none !important; transition: none !important; }
-    *::before, *::after { animation: none !important; transition: none !important; }
-    body { scroll-behavior: auto !important; }
-    .voice-bar { animation: none !important; }
-    .voice-stop-btn { animation: none !important; }
-    [style*="animation"] { animation: none !important; }
-    [style*="transition"] { transition: none !important; }
-  </style>
 
   <div data-include="/header-en.html"></div>
 
