--- a/shop.html
+++ b/shop.html
@@ -4,55 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mağaza – AlbaSpace</title>
-  <!-- Temel stil dosyaları ve mağazaya özel stil -->
   <link rel="stylesheet" href="/assets/css/site.css">
   <link rel="stylesheet" href="/assets/css/shop.css">
+  
   <style>
     :root {
-        /* ... ваши переменные ... */
+      --header-bg: #020617;
+      --accent: #00c2ff;
+      --page-bg: #020617;
+      --text-main: #e5e7eb;
+      --text-muted: #9ca3af;
     }
-    body { /* ... стили body ... */ }
-
-    /* Добавьте это внутрь тега <style> */
-    .product-card, .reveal {
+    body { background: #020617 url("/assets/images/space-bg.jpg") center/cover fixed no-repeat; color: var(--text-main); }
+    
+    /* СТРАХОВКА: Гарантируем, что элементы видимы, непрозрачны и без размытия */
+    .reveal, .product-card, .product-card img {
         opacity: 1 !important;
         transform: none !important;
         visibility: visible !important;
-    }
-
-    /* ---- НОВОЕ ПРАВИЛО ---- */
-    /* Это уберет эффект размытия (блюра) с картинок */
-    .product-card img, .reveal img {
         filter: none !important;
-        opacity: 1 !important; /* На всякий случай дублируем */
     }
-    /* ----------------------- */
-</style>
+  </style>
 
-
-
-</style>
-  <!-- Header/footer'ı yüklemek ve sepet mantığını eklemek için scriptler -->
   <script src="/assets/js/include.js" defer></script>
   <script src="/assets/js/menu-toggle.js" defer></script>
   <script src="/assets/js/cart.js" defer></script>
 </head>
 <body>
-  <!-- Dinamik başlık dahil etme. include.js, bunu mevcut sitenizdeki
-       /header-tr.html içeriğiyle değiştirecektir. -->
   <div data-include="/header-tr.html"></div>
 
   <main class="shop-container">
     <h1 style="text-align:center;margin-bottom:8px;">Mağaza</h1>
     <p style="text-align:center;margin-bottom:32px;color:var(--text-muted);">AlbaSpace kıyafet ve koleksiyonlarını keşfedin.</p>
     <div class="product-list">
-      <!-- 1 hoodie1 -->
       <a href="product-hoodie1.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/hoodie1.png" alt="Hoodie" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -61,13 +51,12 @@
           <div class="product-price"><del>1400.00 TL</del> İNDİRİM %30 980.00 TL</div>
         </div>
       </a>
-      <!-- 2 Hoodie -->
       <a href="product-hoodie.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/hoodie.png" alt="Hoodie" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -76,13 +65,12 @@
           <div class="product-price"><del>1400.00 TL</del> İNDİRİM 30% 980.00 TL</div>
         </div>
       </a>
-      <!-- 3 Katlaç/Sonsuz Küp -->
       <a href="product-hat.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/hat.png" alt="Katlaç/Sonsuz Küp" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -93,13 +81,12 @@
       </a>
 
 
-      <!-- 4 Trucker şapka -->
       <a href="product-stanley.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/stanley.png" alt="Stanley Termos" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -109,13 +96,12 @@
         </div>
       </a>
 
-      <!-- 4 Tişört -->
       <a href="product-shirt.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/shirt.png" alt="T-Shirt" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -125,13 +111,12 @@
         </div>
       </a>
 
-      <!-- 5 Shirt 1 -->
       <a href="product-shirt1.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/shirt1.png" alt="T-Shirt" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -142,13 +127,12 @@
       </a>
 
 
-      <!-- 4 book -->
       <a href="product-albamenvelara.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/albamenvelara.jpg" alt="Kitap" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -158,13 +142,12 @@
         </div>
       </a>
 
-      <!-- 4 book -->
       <a href="product-albamenvelara1.html" class="product-card">
         <div class="product-badge" aria-hidden="true"></div>
         <img src="/assets/products/albemanvelara1.jpg" alt="Kitap PDF" loading="lazy">
         <div class="product-info">
           <div class="payment-icons" aria-hidden="true">
-            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/chart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/chart.html';}"></span>
+            <span class="payment-icons-link" role="link" tabindex="0" onclick="event.stopPropagation(); location.href='/cart.html';" onkeydown="if(event.key==='Enter'){event.stopPropagation(); location.href='/cart.html';}"></span>
             <img src="/assets/icons/iyzico_tr.png" alt="iyzico">
             <img src="/assets/icons/mastercard.png" alt="mastercard">
             <img src="/assets/icons/visa.png" alt="visa">
@@ -174,22 +157,10 @@
         </div>
       </a>
 
-
-
-
-
-
-
     </div>
   </main>
 
-  <!-- Dinamik footer dahil etme -->
   <div data-include="/footer-tr.html"></div>
 
-  
-
-  <script>
-</script>
 </body>
 </html>
-    
