--- a/eng/product-albamenvelara.html
+++ b/eng/product-albamenvelara.html
@@ -32,7 +32,7 @@
         <h1>Book</h1>
         <div class="product-price">1000.00 TL</div>
         <ul class="product-details">
-          <li>The story of Albamen Velara</li>
+          <li>The story of Albamen Ve Lara</li>
           <li>Inspiring</li>
           <li>Colorful images</li>
           <li>Quality print</li>
