--- a/hizmetler.html
+++ b/hizmetler.html
@@ -11,7 +11,7 @@
   <meta property="og:site_name" content="ALBA Space" />
   <meta property="og:title" content="Hizmetlerimiz – VR/AR, Stratosfer, Planetaryum, Turlar | ALBA Space" />
   <meta property="og:description" content="ALBA Space hizmetleri: VR/AR deneyimleri, dijital ikiz, 3B tarama, teleskop gözlemi, Jidoka robot etkinliği, stratosfer reklam & bilim, mobil planetaryum, NASA & CERN turları ve daha fazlası." />
-  <meta property="og:image" content="https://albaspace.com.tr/assets/images/anasayfa-hero.jpg" />
+  <meta property="og:image" content="https://albaspace.com.tr/assets/images/vr.jpg" />
   <meta property="og:url" content="https://albaspace.com.tr/hizmetler.html" />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -179,6 +179,8 @@
 
     <section class="grid">
       <article class="card">
+        <meta property="og:image" content="https://albaspace.com.tr/assets/images/vr.jpg" />
+
         <h3>VR/AR Çözümleri ve İnteraktif Oyunlar</h3>
         <p>Oculus Quest 3 ile ISS ortamı, görevler ve uzay yürüyüşü deneyimi.</p>
         <a class="btn" href="/vr-ar-interaktif-oyunlar.html">Detay</a>
@@ -191,6 +193,8 @@
       </article>
 
       <article class="card">
+        <meta property="og:image" content="https://albaspace.com.tr/assets/images/Gemini_Generated_Image_yk5xbwyk5xbwyk5x.png" />
+
         <h3>3B Tarama ve 3B Mekan Tasarlama</h3>
         <p>3B tarama ile dijital ikiz; 3B yazıcılarla üretim imkanı.</p>
         <a class="btn" href="/3b-tarama-mekan.html">Detay</a>
@@ -209,6 +213,8 @@
       </article>
 
       <article class="card">
+         <meta property="og:image" content="https://albaspace.com.tr/assets/images/2025-12-08_21-01-19.png" />
+
         <h3>Stratosfer Tabakasında Reklam ve Bilimsel Çalışma</h3>
         <p>Stratosfere gönderim, uzay koşulları deneyimi ve geri dönüş.</p>
         <a class="btn" href="/stratosfer-reklam-bilim.html">Detay</a>
